# DeepSeeker

./: .gitignore  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  test_step1.py
bingsift/: __init__.py  net.py  parser.py
deepseeker/: __init__.py  cli.py  config.py  llm_client.py  logging_utils.py  orchestrator.py  prompts.py  protocol.py  reader.py  schema.py  search_client.py  step1_analyzer.py  text_extraction_config.py  text_extractor.py  types.py  utils.py
deepseeker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deepseeker/prompts/: llm0_orchestrator_step1.md
deepseeker/search/: bingsift.py  provider.py
deepseeker/search/bingsift/: cli.py  filters.py
examples/: sample_config.yaml
tests/: test_protocol_parsing.py
